# xmppconsole

./: .gitignore  Makefile.am  README.md  configure.ac
docs/: xmppconsole.1
src/: list.c  list.h  misc.h  ui.c  ui.h  ui_console.c  ui_console.h  ui_gtk.c  ui_gtk.h  ui_ncurses.c  ui_ncurses.h  xmpp.h  xmppconsole.c
